# presentations

./: .gitignore  README.md  openstack-2014-11-25-selling-mist  sawdap-2014-12-10-evidence-based-operations
2014-12-10-evidence-based-operations/: README.md  slides.md  template.html
2015-04-18-makers-place-leichhardt-diy-electrophysiography/: Makefile  README.md  slides.md
2015-04-18-makers-place-leichhardt-electrophysiography/img/: partial-temporal-ictus.xcf
2015-08-26-fp-syd-approx-quantiles/: Makefile  slides.md
2015-08-26-fp-syd-approx-quantiles/approx-quantile/: README.md  approx-quantile.cabal
2015-08-26-fp-syd-approx-quantiles/approx-quantile/main/: accuracy.hs  bench.hs  gamma.hs  gaussian.hs  quantile.hs
2015-08-26-fp-syd-approx-quantiles/approx-quantile/src/Statistics/Quantile/: Bench.hs  Exact.hs  Types.hs  Util.hs
2015-08-26-fp-syd-approx-quantiles/approx-quantile/src/Statistics/Quantile/Approximate/: Sampling.hs
2015-08-26-fp-syd-approx-quantiles/approx-quantile/src/Statistics/Quantile/Bench/: Accuracy.hs  Gen.hs
2016-05-25_fpsyd_herbie/: .gitignore  Makefile  slides.tex
2016-05-25_fpsyd_herbie/img/: loop.dot
2017-07-26_fpsyd_haskell-crypto/: .gitignore  Makefile  slides.tex
2017-07-26_fpsyd_haskell-crypto/img/: auth-prims.dot  auth.dot
openstack-2014-11-25-selling-mist/: Makefile  README.md  selling-mist-slides.md  template.html
sawdap-2014-12-10-evidence-based-operations/: Makefile  README.md
